--- a/Projets.html
+++ b/Projets.html
@@ -17,9 +17,18 @@
 
 <body>
   <header>
-      <nav class="navbar navbar-expand-lg navbar-light transparent pt-1 m-0">
+      <nav class="navbar navbar-expand-lg navbar-light transparent pt-3 m-0">
         <div class="logo-navigation">
-            <a class="navbar-brand text-left d-none d-md-block " href="https://www.linkedin.com/in/guillaume-labrecque-6044ba7a/" target="blank"><h1>guillaume<br>labrecque</h1></a>
+          <svg class="d-none d-md-block" id="logo-nav" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 345 296" style="enable-background:new 0 0 345 296;" xml:space="preserve">
+            <path d="M334,145v18h-9c-4.97,0-9,4.03-9,9v103.5c0,5.88-3.76,10.86-9,12.72c-1.41,0.49-2.92,0.78-4.5,0.78H253v-27h22.5c7.46,0,13.5-6.04,13.5-13.5v-81c0-1.58,0.29-3.09,0.78-4.5c1.86-5.24,6.84-9,12.72-9c-5.88,0-10.86-3.76-12.72-9c-0.49-1.41-0.78-2.92-0.78-4.5v-81c0-7.46-6.04-13.5-13.5-13.5H253V19h49.5c1.58,0,3.09,0.29,4.5,0.78c5.24,1.86,9,6.84,9,12.72V136c0,4.97,4.03,9,9,9H334z"/>
+            <path d="M10,145v18h9c4.97,0,9,4.03,9,9v103.5c0,5.88,3.76,10.86,9,12.72c1.41,0.49,2.92,0.78,4.5,0.78H91v-27H68.5c-7.46,0-13.5-6.04-13.5-13.5v-81c0-1.58-0.29-3.09-0.78-4.5c-1.86-5.24-6.84-9-12.72-9c5.88,0,10.86-3.76,12.72-9c0.49-1.41,0.78-2.92,0.78-4.5v-81C55,52.04,61.04,46,68.5,46H91V19H41.5c-1.58,0-3.09,0.29-4.5,0.78c-5.24,1.86-9,6.84-9,12.72V136c0,4.97-4.03,9-9,9H10z"/>
+            <g>
+              <path d="M253,55h-81c-39.76,0-72,32.24-72,72c0,27.14,15.02,50.76,37.19,63.03c5.17,2.86,10.71,5.1,16.55,6.63c5.83,1.52,11.95,2.34,18.26,2.34c39.76,0,72-32.24,72-72c0-17.03-5.93-32.67-15.81-45c-0.03-0.03-0.05-0.06-0.07-0.09C242.04,80.83,253,69.2,253,55z M172,172c-24.85,0-45-20.15-45-45c0-24.85,20.15-45,45-45s45,20.15,45,45C217,151.85,196.85,172,172,172z"/>
+              <path d="M208,226h-99c0,14.91,12.09,27,27,27h99C235,238.09,222.91,226,208,226z"/>
+            </g>
+          </svg>
+          <!-- <a class="navbar-brand text-left d-none d-md-block " href="https://www.linkedin.com/in/guillaume-labrecque-6044ba7a/" target="blank"><h1>guillaume<br>labrecque</h1></a> -->
         </div> 
         <button  class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,12 +45,12 @@
         </div>
     </nav>
     <!-- HERO -->
-    <div class="hero ">
+    <!-- <div class="hero ">
       <div class="row">
-        <div class="logo col-md-12 col-lg-5 vertical-center "> <!--vertical-center-->
+        <div class="logo col-md-12 col-lg-5 vertical-center "> vertical-center -->
           <!-- <img src="./img/profilePic.jpg" class="img-fluid rounded" id="profilPic" alt="profilPic"> -->
           <!--logo col-md-12 offset-md-1 col-lg-5 offset-lg-1 vertical-center-->
-          <svg id="logoHead" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          <!-- <svg id="logoHead" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" viewBox="0 0 504 419.76" style="enable-background:new 0 0 504 419.76;" xml:space="preserve"
             fill="url(#grad1)">
             <defs>
@@ -63,9 +72,9 @@
             </g>
           </svg>
         </div>
-        <div class="titleHead col-md-12 col-lg-6 offset-lg-1 vertical-center">
+        <div class="titleHead col-md-12 col-lg-6 offset-lg-1 vertical-center"> -->
           <!--col-md-10 offset-md-1 col-lg-5-->
-          <div class="bonjour">
+          <!-- <div class="bonjour">
             <h1>Bonjour!<br> je suis Guillaume</h1>
           </div>
           <div class="description">
@@ -73,19 +82,19 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </header>
   
 
   <section class="projet" id="projectSection">
-    <h1 class="sectionTitle">Projets</h1>
-    <div class="carteRow row">
+    <h1 class="sectionTitle p-0 mb-5">Projets</h1>
+    <div class="carteRow row mt-0">
       <!-- Image des cartes -->
       <div class="projetImage col-xl-7 col-lg-12  p-0">
         <img src="./img/Zelda.png" class="img-fluid" alt="Responsive image" />
       </div>
       <!-- titre + bouttons des cartes -->
-      <div class="projetText col-xl-4 offset-xl-1 col-lg-12  ">
+      <div class="projetText col-xl-4 offset-xl-1 col-lg-12">
         <h3>Titre projet</h3>
         <div class="topRight mb-2">
           <button class="topDemo">DEMO</button>
@@ -137,7 +146,7 @@
       </div>
     </div>
     </div>
-    <div class="carteRow row">
+    <div class="carteRow row mb-0">
       <!-- Image des cartes -->
       <div class="projetImage col-xl-7 col-lg-12  p-0">
         <img src="./img/Zelda.png" class="img-fluid" alt="Responsive image" />
@@ -166,19 +175,19 @@
       </div>
     </div>
     </div>
-    <div class="carteRow row flex-row-reverse">
-      <!-- Image des cartes -->
+    <!-- <div class="carteRow row flex-row-reverse">
+      <!- Image des cartes ->
       <div class="projetImage col-xl-7 offset-xl-1 col-lg-12 order-xl-1 p-0">
         <img src="./img/Zelda.png" class="img-fluid" alt="Responsive image" />
       </div>
-      <!-- titre + bouttons des cartes -->
+      <!- titre + bouttons des cartes ->
       <div class="projetText col-xl-4 col-lg-12 order-xl-2">
         <h3>Titre projet</h3>
         <div class="topRight mb-2">
           <button class="topDemo">DEMO</button>
           <a href="#"><i class="fab fa-github fa-lg"></i></a>
         </div>
-        <!-- Description + liste des cartes -->
+        <!- Description + liste des cartes ->
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus dolorum libero esse atque labore vitae
           reiciendis culpa eaque. Voluptas dolor veniam necessitatibus illo ipsum.</p>
         <h4>
@@ -193,11 +202,11 @@
           <li>Bootstrap</li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </section>
 
   <section class="curriculum" id="cv">
-    <h1 class="sectionTitle" id="titleSectionCv">Curriculum</h1>
+    <h1 class="sectionTitle p-0 mb-5" id="titleSectionCv">Curriculum</h1>
     <div class="row">
       <div class="col-12"><!--Section présentation-->
         <div class="educations">
@@ -303,16 +312,16 @@
       <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         x="0px" y="0px" viewBox="0 0 504 419.76" style="enable-background:new 0 0 504 419.76;" xml:space="preserve"
         fill="url(#grad1)">
-        <defs>
+        <!-- <defs>
           <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
             <stop offset="0%" style="stop-color:#4af9ff;stop-opacity:1" />
             <stop offset="100%" style="stop-color:#299497;stop-opacity:1" />
           </linearGradient>
-        </defs>
+        </defs> -->
         <g>
-          <path style="fill: rgb(59, 59, 59);"
+          <path
             d="M504,196v28h-14c-7.73,0-14,6.27-14,14v161c0,9.15-5.85,16.89-14,19.79c-2.19,0.76-4.54,1.21-7,1.21h-77v-42h35c11.6,0,21-9.4,21-21V231c0-2.46,0.45-4.81,1.21-7c2.89-8.15,10.64-14,19.79-14c-9.15,0-16.89-5.85-19.79-14c-0.76-2.19-1.21-4.54-1.21-7V63c0-11.6-9.4-21-21-21h-35V0h77c2.46,0,4.81,0.45,7,1.21c8.15,2.89,14,10.64,14,19.79v161c0,7.73,6.27,14,14,14H504z" />
-          <path style="fill: rgb(59, 59, 59);"
+          <path
             d="M0,196l0,28h14c7.73,0,14,6.27,14,14v161c0,9.15,5.85,16.89,14,19.79c2.19,0.76,4.54,1.21,7,1.21h77v-42H91c-11.6,0-21-9.4-21-21V231c0-2.46-0.45-4.81-1.21-7c-2.89-8.15-10.64-14-19.79-14c9.15,0,16.89-5.85,19.79-14c0.76-2.19,1.21-4.54,1.21-7V63c0-11.6,9.4-21,21-21h35V0L49,0c-2.46,0-4.81,0.45-7,1.21C33.85,4.11,28,11.85,28,21v161c0,7.73-6.27,14-14,14H0z" />
           <g>
             <path
@@ -330,12 +339,12 @@
           class="fab fa-linkedin fa-lg"></i></a>
       <a href="https://github.com/Dabrecks" class="linkFooter" target="blank"><i class="fab fa-github fa-lg"></i></a>
     </div>
-    <div class="contactFooter text-center row mb-0">
-      <div class="col-sm-12 col-md 6 mb-0">
-        <p class="text-center mb-0">guillaume_labrecque@outlook.com</p>
+    <div class="text-center row mb-0">
+      <div class="contactFooter col-sm-12 col-md 6 mb-0">
+        <p class="mb-0" id="email">guillaume_labrecque@outlook.com</p>
       </div>
-      <div class="col-sm-12 col-md 6 mb-0">
-        <p class="text-center mb-0">514 268-9313</p>
+      <div class="contactFooter col-sm-12 col-md 6 mb-0">
+        <p class="mb-0" id="tel">514 268-9313</p>
       </div>
     </div>
     <div class="copyFooter row mb-1">
